@@ -1,17 +1,16 @@
-# Part of usb-modeswitch-data, version 20110805
+# Part of usb-modeswitch-data, version 20111023
 #
-# This file is intended for USB_ModeSwitch version >= 1.1.2
-# but will not break anything if used with versions >= 1.0.3
+# Recommended use with USB_ModeSwitch >= 1.2.0, works with versions >= 1.0.3
 #
-ACTION!="add", GOTO="modeswitch_rules_end"
+ACTION!="add|change", GOTO="modeswitch_rules_end"
 
-# This adds a symlink "gsmmodem[n]" to the lowest ttyUSB port with interrupt
+# Adds a symlink "gsmmodem[n]" to the lowest ttyUSB port with interrupt
 # transfer; checked against a list of known modems, or else no action
 KERNEL=="ttyUSB*", ATTRS{bNumConfigurations}=="*", PROGRAM="usb_modeswitch --symlink-name %p %s{idVendor} %s{idProduct} %E{PRODUCT}", SYMLINK="%c"
 
 SUBSYSTEM!="usb", GOTO="modeswitch_rules_end"
 
-# This adds the device ID to the "option" driver after a warm boot
+# Adds the device ID to the "option" driver after a warm boot
 # in cases when the device is yet unknown to the driver; checked
 # against a list of known modems, or else no action
 ATTR{bInterfaceClass}=="ff", ATTR{bInterfaceNumber}=="00", ATTRS{bNumConfigurations}=="*", RUN+="usb_modeswitch --driver-bind %p %s{idVendor} %s{idProduct} %E{PRODUCT}"
@@ -43,6 +42,9 @@ ATTRS{idVendor}=="0421", ATTRS{idProduct}=="0622", RUN+="usb_modeswitch '%b/%k'"
 # Nokia CS-18
 ATTRS{idVendor}=="0421", ATTRS{idProduct}=="0627", RUN+="usb_modeswitch '%b/%k'"
 
+# Nokia CS-19
+ATTRS{idVendor}=="0421", ATTRS{idProduct}=="062c", RUN+="usb_modeswitch '%b/%k'"
+
 # Vodafone MD950 (Wisue Technology), Philips (?)
 ATTRS{idVendor}=="0471", ATTRS{idProduct}=="1210", RUN+="usb_modeswitch '%b/%k'"
 
@@ -61,14 +63,17 @@ ATTRS{idVendor}=="04e8", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
 # AVM Fritz!Wlan USB Stick N
 ATTRS{idVendor}=="057c", ATTRS{idProduct}=="84ff", RUN+="usb_modeswitch '%b/%k'"
 
-# Prolink P2000 CDMA, Samsung SGH-Z810, Older Option devices, Vertex Wireless 100 Series, AnyDATA devices, Bless UC165
+# Prolink P2000 CDMA, Samsung SGH-Z810, older Option devices, Vertex Wireless 100 Series, AnyDATA devices, Bless UC165
 ATTRS{idVendor}=="05c6", ATTRS{idProduct}=="1000", RUN+="usb_modeswitch '%b/%k'"
 
-# HSDPA USB modem from dealextreme 
+# HSDPA USB modem from dealextreme
 ATTRS{idVendor}=="05c6", ATTRS{idProduct}=="2000", RUN+="usb_modeswitch '%b/%k'"
 
 # D-Link DWM-162-U5, Micromax MMX 300c
 ATTRS{idVendor}=="05c6", ATTRS{idProduct}=="2001", RUN+="usb_modeswitch '%b/%k'"
+
+# AnyDATA APE-540H
+ATTRS{idVendor}=="05c6", ATTRS{idProduct}=="6503", RUN+="usb_modeswitch '%b/%k'"
 
 # Siptune LM-75 ("LinuxModem")
 ATTRS{idVendor}=="05c6", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
@@ -394,6 +399,9 @@ ATTRS{idVendor}=="12d1", ATTRS{idProduct}=="1557", RUN+="usb_modeswitch '%b/%k'"
 # Huawei E173s
 ATTRS{idVendor}=="12d1", ATTRS{idProduct}=="1c0b", RUN+="usb_modeswitch '%b/%k'"
 
+# Huawei ET302
+ATTRS{idVendor}=="12d1", ATTRS{idProduct}=="1d50", RUN+="usb_modeswitch '%b/%k'"
+
 # Huawei ET8282 
 ATTRS{idVendor}=="12d1", ATTRS{idProduct}=="1da1", RUN+="usb_modeswitch '%b/%k'"
 
@@ -418,6 +426,9 @@ ATTRS{idVendor}=="1410", ATTRS{idProduct}=="5031", RUN+="usb_modeswitch '%b/%k'"
 # Novatel Generic MiFi 2352 / Vodafone MiFi 2352
 ATTRS{idVendor}=="1410", ATTRS{idProduct}=="5041", RUN+="usb_modeswitch '%b/%k'"
 
+# Novatel Wireless MC545 HSPA
+ATTRS{idVendor}=="1410", ATTRS{idProduct}=="5059", RUN+="usb_modeswitch '%b/%k'"
+
 # Sequans SQN1210/SQN1220 (generic chipsets)
 ATTRS{idVendor}=="148e", ATTRS{idProduct}=="a000", RUN+="usb_modeswitch '%b/%k'"
 
@@ -429,6 +440,9 @@ ATTRS{idVendor}=="16d8", ATTRS{idProduct}=="6281", RUN+="usb_modeswitch '%b/%k'"
 
 # C-motech D-50 (aka "CDU-680")
 ATTRS{idVendor}=="16d8", ATTRS{idProduct}=="6803", RUN+="usb_modeswitch '%b/%k'"
+
+# C-motech CDU-685a
+ATTRS{idVendor}=="16d8", ATTRS{idProduct}=="6804", RUN+="usb_modeswitch '%b/%k'"
 
 # C-motech CHU-629S
 ATTRS{idVendor}=="16d8", ATTRS{idProduct}=="700a", RUN+="usb_modeswitch '%b/%k'"
@@ -478,6 +492,9 @@ ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="0115", RUN+="usb_modeswitch '%b/%k'"
 # ZTE MF190 (Variant)
 ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="0149", RUN+="usb_modeswitch '%b/%k'"
 
+# ZTE MF820 4G LTE
+ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="0166", RUN+="usb_modeswitch '%b/%k'"
+
 # Vodafone (ZTE) K3805-Z
 ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="1001", RUN+="usb_modeswitch '%b/%k'"
 
@@ -508,11 +525,17 @@ ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="1216", RUN+="usb_modeswitch '%b/%k'"
 # ZTE MF190
 ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="1224", RUN+="usb_modeswitch '%b/%k'"
 
+# ZTE MF192 (Variant)
+ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="1517", RUN+="usb_modeswitch '%b/%k'"
+
 # ZTE devices
 ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="2000", RUN+="usb_modeswitch '%b/%k'"
 
 # ZTE AX226 WiMax
 ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="bccd", RUN+="usb_modeswitch '%b/%k'"
+
+# ZTE AC682 (a.k.a. SmartFren Connex)
+ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="ffde", RUN+="usb_modeswitch '%b/%k'"
 
 # ZTE "ffe" devices 1 (e.g. Cricket A605)
 ATTRS{idVendor}=="19d2", ATTRS{idProduct}=="ffe6", RUN+="usb_modeswitch '%b/%k'"
@@ -535,6 +558,9 @@ ATTRS{idVendor}=="1b7d", ATTRS{idProduct}=="0700", RUN+="usb_modeswitch '%b/%k'"
 # Alcatel X200/X200L/X060S
 ATTRS{idVendor}=="1bbb", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
 
+# Alcatel OT X220L
+ATTRS{idVendor}=="1bbb", ATTRS{idProduct}=="f052", RUN+="usb_modeswitch '%b/%k'"
+
 # Alcatel One Touch X020
 ATTRS{idVendor}=="1c9e", ATTRS{idProduct}=="1001", RUN+="usb_modeswitch '%b/%k'"
 
@@ -553,11 +579,20 @@ ATTRS{idVendor}=="1c9e", ATTRS{idProduct}=="9e00", RUN+="usb_modeswitch '%b/%k'"
 # MobiData MBD-200HU and others
 ATTRS{idVendor}=="1c9e", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
 
+# Qisda H21 Flying Beetle
+ATTRS{idVendor}=="1da5", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
+
 # Solomon S3Gm-660
 ATTRS{idVendor}=="1dd6", ATTRS{idProduct}=="1000", RUN+="usb_modeswitch '%b/%k'"
 
+# Philips PicoPix 1020 Projector
+ATTRS{idVendor}=="1de1", ATTRS{idProduct}=="1101", RUN+="usb_modeswitch '%b/%k'"
+
 # Option iCON 210, PROLiNK PHS100, Hyundai MB-810, A-Link 3GU
 ATTRS{idVendor}=="1e0e", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
+
+# 3GO 3GO11 HSUPA
+ATTRS{idVendor}=="1e89", ATTRS{idProduct}=="f000", RUN+="usb_modeswitch '%b/%k'"
 
 # AirPlus MCD-800
 ATTRS{idVendor}=="1edf", ATTRS{idProduct}=="6003", RUN+="usb_modeswitch '%b/%k'"
