@@ -1,0 +1,13 @@
+########################################################
+# Nokia CS-19
+
+DefaultVendor= 0x0421
+DefaultProduct=0x062c
+
+TargetVendor=  0x0421
+TargetProduct= 0x062d
+
+MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
+
+CheckSuccess=20
+
