@@ -1,0 +1,13 @@
+########################################################
+# AnyDATA APE-540H
+
+DefaultVendor= 0x05c6
+DefaultProduct=0x6503
+
+TargetVendor=  0x16d5
+TargetProduct= 0x6502
+
+MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
+
+CheckSuccess=20
+
