@@ -1,0 +1,12 @@
+########################################################
+# C-motech CDU-685a
+
+DefaultVendor= 0x16d8
+DefaultProduct=0x6804
+
+TargetClass=0xff
+
+MessageContent="555342431234567824000000800008ff524445564348470000000000000000"
+
+CheckSuccess=20
+
