@@ -1,0 +1,13 @@
+########################################################
+# ZTE MF820 4G LTE
+
+DefaultVendor= 0x19d2
+DefaultProduct=0x0166
+
+TargetVendor=  0x19d2
+TargetProduct= 0x0167
+
+MessageContent="55534243123456782400000080000685000000240000000000000000000000"
+
+CheckSuccess=20
+
