@@ -1,0 +1,15 @@
+########################################################
+# ZTE MF192 (Variant)
+
+DefaultVendor= 0x19d2
+DefaultProduct=0x1517
+
+TargetVendor=  0x19d2
+TargetProduct= 0x1519
+
+MessageContent="5553424312345678000000000000061e000000000000000000000000000000"
+MessageContent2="5553424312345679000000000000061b000000020000000000000000000000"
+NeedResponse=1
+
+CheckSuccess=20
+
