@@ -1,0 +1,13 @@
+########################################################
+# Alcatel OT X220L
+
+DefaultVendor= 0x1bbb
+DefaultProduct=0xf052
+
+TargetVendor=  0x1bbb
+TargetProduct= 0x0052
+
+MessageContent="55534243123456788000000080000606f50402527000000000000000000000"
+
+CheckSuccess=20
+
