@@ -1,0 +1,13 @@
+########################################################
+# Philips PicoPix 1020 Projector
+
+DefaultVendor= 0x1de1
+DefaultProduct=0x1101
+
+TargetVendor=  0x21e7
+TargetProduct= 0x000e
+
+MessageContent="55534243123456780000000000000cff020000000000000000000000000000"
+
+CheckSuccess=20
+
