@@ -1,0 +1,13 @@
+########################################################
+# 3GO 3GO11 HSUPA
+
+DefaultVendor= 0x1e89
+DefaultProduct=0xf000
+
+TargetVendor=  0x1e89
+TargetProduct= 0x1a20
+
+MessageContent="5553424312345678800000008000060619181a207000000000000000000000"
+
+CheckSuccess=20
+
