@@ -1,3 +1,13 @@
+20111023:
+    Added devices: C-motech CDU-685a, Qisda H21 "Flying Beetle" (needs
+    program version >= 1.2.0)
+20111012:
+    Added devices: AnyDATA APE-540H, ZTE MF192 (new variant)
+20111007:
+    Added devices: Alcatel OT X220L, Nokia CS-19, Huawei ET302, 3GO 3GO11
+    HSUPA, Novatel MC545, ZTE AC682, ZTE MF820 4G LTE, Philips PicoPix 1020
+    (LED projector); added some ZTE target IDs; modded udev rules to include
+    "change" as trigger event
 20110805:
     Added devices: Vodafone/Huawei K4510 & K4511, Vodafone/ZTE K3770-Z,
     K3772-Z and K4510-Z (thanks to Andrew Bird); five Option HSO modems;
